--- a/cpp_17/CMakeLists.txt
+++ b/cpp_17/CMakeLists.txt
@@ -3,4 +3,4 @@ project(cpp_17)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(cpp_17 main.cpp globalvar.h)
+add_executable(cpp_17 globalvar.h solution_w_1_s_2.cpp)
